# $Id: Makefile.am,v 1.12 2012-09-19 18:48:51 pbuchbinder Exp $

bin_PROGRAMS=qsfilter2 qslog qspng qsrotate qssign qstail qsgrep qsexec qscheck qsgeo qslogger qshead

qsfilter2_SOURCES= \
	qsfilter2.c qs_util.c

qslog_SOURCES= \
	qslog.c qs_util.c

qspng_SOURCES= \
	qspng.c qs_util.c

qsrotate_SOURCES= \
	qsrotate.c qs_util.c

qssign_SOURCES= \
	qssign.c qs_util.c

qstail_SOURCES= \
	qstail.c qs_util.c

qshead_SOURCES= \
	qshead.c qs_util.c

qsgrep_SOURCES= \
	qsgrep.c qs_util.c

qsexec_SOURCES= \
	qsexec.c qs_util.c

qscheck_SOURCES= \
	qscheck.c qs_util.c

qsgeo_SOURCES= \
	qsgeo.c qs_util.c

qslogger_SOURCES= \
	qslogger.c qs_util.c

