# $Id: Makefile.am,v 1.3 2010-12-20 21:17:33 pbuchbinder Exp $

bin_PROGRAMS=qsfilter2 qslog qspng qsrotate qssign qstail

qsfilter2_SOURCES= \
	qsfilter2.c

qslog_SOURCES= \
	qslog.c qs_util.c

qspng_SOURCES= \
	qspng.c qs_util.c

qsrotate_SOURCES= \
	qsrotate.c qs_util.c

qssign_SOURCES= \
	qssign.c

qstail_SOURCES= \
	qstail.c
