# $Id: Makefile.am,v 1.1 2010-08-17 18:32:34 pbuchbinder Exp $

bin_PROGRAMS=qscheck qsfilter2 qslog qspng qsrotate qssign

qscheck_SOURCES= \
	qscheck.c qs_util.c

qsfilter2_SOURCES= \
	qsfilter2.c

qslog_SOURCES= \
	qslog.c qs_util.c

qspng_SOURCES= \
	qspng.c qs_util.c

qsrotate_SOURCES= \
	qsrotate.c qs_util.c

qssign_SOURCES= \
	qssign.c



