# $Id: Makefile.am,v 1.8 2011-07-21 19:26:01 pbuchbinder Exp $

bin_PROGRAMS=qsfilter2 qslog qspng qsrotate qssign qstail qsgrep qsexec qscheck

qsfilter2_SOURCES= \
	qsfilter2.c

qslog_SOURCES= \
	qslog.c qs_util.c

qspng_SOURCES= \
	qspng.c qs_util.c

qsrotate_SOURCES= \
	qsrotate.c qs_util.c

qssign_SOURCES= \
	qssign.c

qstail_SOURCES= \
	qstail.c

qsgrep_SOURCES= \
	qsgrep.c

qsexec_SOURCES= \
	qsexec.c

qscheck_SOURCES= \
	qscheck.c qs_util.c

