# $Id: Makefile.am,v 1.9 2011-10-31 20:50:19 pbuchbinder Exp $

bin_PROGRAMS=qsfilter2 qslog qspng qsrotate qssign qstail qsgrep qsexec qscheck

qsfilter2_SOURCES= \
	qsfilter2.c qs_util.c

qslog_SOURCES= \
	qslog.c qs_util.c

qspng_SOURCES= \
	qspng.c qs_util.c

qsrotate_SOURCES= \
	qsrotate.c qs_util.c

qssign_SOURCES= \
	qssign.c qs_util.c

qstail_SOURCES= \
	qstail.c qs_util.c

qsgrep_SOURCES= \
	qsgrep.c qs_util.c

qsexec_SOURCES= \
	qsexec.c qs_util.c

qscheck_SOURCES= \
	qscheck.c qs_util.c

